--- a/client/.env
+++ b/client/.env
@@ -8,3 +8,5 @@ VITE_CLIENT_ID = "ad60685b-8325-40f4-9427-fc40b5c54068"
 
 VITE_BOTPRESS_PAT = "bp_pat_95zI2X2uhwlw9j03dXoK0BPwmblULRheU27s"
 VITE_BOTPRESS_BOT_ID = "ad60685b-8325-40f4-9427-fc40b5c54068"
+
+VITE_API_URL = "http://localhost:3000"
