--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,21 @@
   "dependencies": {
     "@botpress/webchat": "^2.3.8",
     "@clerk/clerk-react": "^5.25.5",
+    "@clerk/localizations": "^3.13.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.71.5",
     "imagekit": "^6.0.0",
     "imagekitio-react": "^4.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.1",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
